# My_Todo

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  quick_demo.py  test_app.sh
.specify/memory/: constitution.md
history/prompts/001-todo-cli-app/: 001-create-todo-cli-spec.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-generate-task-breakdown.tasks.prompt.md
history/prompts/constitution/: 001-initialize-project-constitution.constitution.prompt.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-app/checklists/: requirements.md
src/: __init__.py  main.py  models.py  services.py
tests/unit/: test_task_model.py
